--- a/index.html
+++ b/index.html
@@ -1,6 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Slider</title>
+    <link rel="stylesheet" href="./main.css">
+    <style>
+        .slider {
+            overflow: hidden;
+            width: 80%;
+            position: relative;
+            margin: 0 auto;
+        }
+        .slider-container {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+        .slide {
+            flex: 1 0 25%; /* Each slide takes up 1/3rd of the container */
+            box-sizing: border-box;
+            padding: 2rem;
+            margin: 8px;
+        }
+    </style>
+</head>
+<body>
+    <main class="">
+        <div id="header"></div>
+        <div id="hero"></div>
+        <div id="company" ></div>
+        <div id="services"></div>
 
+        <div id="about" class="py-16">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold text-center mb-8">About Us</h2>
+
+                <!-- Simple Slider -->
+                <div class="slider">
+                    <div class="slider-container">
+                        <!-- Slide 1 -->
+                        <div class="slide flex items-center justify-center bg-white shadow-md rounded-lg">
+                            <div class="text-center">
+                                <h2 class="text-xl font-bold mb-2">Card 1</h2>
+                                <p class="text-gray-700">This is the content of the first card.</p>
+                            </div>
+                        </div>
+                        <!-- Slide 2 -->
+                        <div class="slide flex items-center justify-center bg-white shadow-md rounded-lg">
+                            <div class="text-center">
+                                <h2 class="text-xl font-bold mb-2">Card 2</h2>
+                                <p class="text-gray-700">This is the content of the second card.</p>
+                            </div>
+                        </div>
+                        <!-- Slide 3 -->
+                        <div class="slide flex items-center justify-center bg-white shadow-md rounded-lg">
+                            <div class="text-center">
+                                <h2 class="text-xl font-bold mb-2">Card 3</h2>
+                                <p class="text-gray-700">This is the content of the third card.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer"></div>
+    </main>
+    <script type="module" src="/src/main.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const slider = document.querySelector('.slider-container');
+            let isDragging = false,
+                startPos = 0,
+                currentTranslate = 0,
+                prevTranslate = 0,
+                animationID = 0,
+                currentIndex = 0;
+
+            slider.addEventListener('mousedown', touchStart);
+            slider.addEventListener('mouseup', touchEnd);
+            slider.addEventListener('mouseleave', touchEnd);
+            slider.addEventListener('mousemove', touchMove);
+
+            slider.addEventListener('touchstart', touchStart);
+            slider.addEventListener('touchend', touchEnd);
+            slider.addEventListener('touchmove', touchMove);
+
+            function touchStart(event) {
+                isDragging = true;
+                startPos = getPositionX(event);
+                animationID = requestAnimationFrame(animation);
+                slider.classList.add('grabbing');
+            }
+
+            function touchEnd() {
+                isDragging = false;
+                cancelAnimationFrame(animationID);
+                const movedBy = currentTranslate - prevTranslate;
+
+                if (movedBy < -100 && currentIndex < 2) currentIndex += 1;
+                if (movedBy > 100 && currentIndex > 0) currentIndex -= 1;
+
+                setPositionByIndex();
+                slider.classList.remove('grabbing');
+            }
+
+            function touchMove(event) {
+                if (isDragging) {
+                    const currentPosition = getPositionX(event);
+                    currentTranslate = prevTranslate + currentPosition - startPos;
+                }
+            }
+
+            function getPositionX(event) {
+                return event.type.includes('mouse') ? event.pageX : event.touches[0].clientX;
+            }
+
+            function animation() {
+                setSliderPosition();
+                if (isDragging) requestAnimationFrame(animation);
+            }
+
+            function setSliderPosition() {
+                slider.style.transform = `translateX(${currentTranslate}px)`;
+            }
+
+            function setPositionByIndex() {
+                currentTranslate = currentIndex * -window.innerWidth / 3; // Adjust for 3 visible slides
+                prevTranslate = currentTranslate;
+                setSliderPosition();
+            }
+        });
+    </script>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,15 +146,15 @@
 </head>
 
 <body>
-    <main class="flex justify-center gap-4 flex-col min-h-screen">
-        <h1 class="text-3xl text-center font-bold underline">
-            HTML & Tailwind CSS Starter Pack lets start it
-        </h1>
-        <p class="text-center text-xl">
-            This is a starter pack for HTML & Tailwind CSS projects.
-        </p>
-        <img src="https://bit.ly/3wsmzTy" alt="meme" class="mx-auto">
+    <main class="">
+        <div id="header"></div>
+        <div id="hero"></div>
+        <div id="about" ></div>
+        <div id="services"></div>
+        <div id="footer"></div>
     </main>
+    <script type="module" src="/src/main.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 
-</html>
+</html> -->
