--- a/src/footer.html
+++ b/src/footer.html
@@ -1,13 +1,185 @@
-<footer class="relative bg-cover bg-center h-[500px]" style="background-image: url('/src/assets/footer-bg.png');">
-  <div class="absolute inset-0 bg-[#24193a] opacity-40 "></div>
-    
-    <div class=" w-[75%] mx-auto relative flex items-center justify-center h-full text-center text-white">
-        <div>
-            <h1 class="text-4xl font-bold mb-4">Welcome to Our Website</h1>
-            <p class="text-xl">This is a beautiful banner with a background image and a purple overlay.</p>
+<footer
+  class="relative bg-cover bg-center h-[1000px] sm:h-[440px]"
+  style="background-image: url('/src/assets/footer-bg.png')"
+>
+  <div class="absolute inset-0 bg-[#0d071a] opacity-30"></div>
+
+  <div
+    class="w-[75%] mx-auto relative items-center justify-center h-full text-center text-white"
+  >
+    <div class="grid grid-cols-1 sm:grid-cols-2 pt-32">
+      <!-- sec1 -->
+      <div class="col-span-1 grid grid-cols-1 sm:grid-cols-2 gap-5">
+        <!-- span1 -->
+        <div class="col-span-1 text-left flex flex-col justify-center my-auto">
+          <p class="text-xs text-lightPurple">
+            We work Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Eius veniam, iste voluptates incidunt pariatur enim.
+          </p>
+          <div class="flex flex-row items-center space-x-4 my-4">
+            <span class="p-2 rounded-full border border-primary">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-3 w-3"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M19.633 7.997c.014.187.014.373.014.56 0 5.73-4.358 12.33-12.323 12.33-2.44 0-4.707-.717-6.613-1.95.338.04.68.054 1.027.054 2.028 0 3.895-.692 5.38-1.855-1.894-.034-3.495-1.287-4.044-3.008.265.048.53.075.8.075.39 0 .77-.053 1.134-.147-1.976-.397-3.46-2.144-3.46-4.238v-.054c.58.324 1.25.515 1.958.537-1.16-.772-1.928-2.09-1.928-3.586 0-.787.21-1.525.574-2.164 2.098 2.573 5.23 4.267 8.755 4.448-.07-.314-.104-.643-.104-.98 0-2.365 1.916-4.29 4.286-4.29 1.234 0 2.35.52 3.13 1.355.976-.192 1.888-.55 2.716-1.044-.32 1.002-.99 1.836-1.866 2.364.868-.1 1.697-.334 2.468-.674-.576.862-1.3 1.617-2.142 2.22z"
+                />
+              </svg>
+            </span>
+            <span class="p-2 rounded-full border border-primary">
+              <svg
+                class="w-3 h-3"
+                width="13"
+                height="24"
+                viewBox="0 0 13 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10.8984 14.6199H7.96875V23.3699H4.0625V14.6199H0.859375V11.0261H4.0625V8.25269C4.0625 5.12769 5.9375 3.36987 8.78906 3.36987C10.1562 3.36987 11.6016 3.64331 11.6016 3.64331V6.72925H10C8.4375 6.72925 7.96875 7.66675 7.96875 8.68237V11.0261H11.4453L10.8984 14.6199Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+            <span class="p-2 rounded-full border border-primary">
+              <svg
+                class="w-3 h-3"
+                width="18"
+                height="24"
+                viewBox="0 0 18 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3.90625 20.8699H0.273438V9.19019H3.90625V20.8699ZM2.07031 7.62769C0.9375 7.62769 0 6.65112 0 5.47925C0 3.87769 1.71875 2.86206 3.125 3.68237C3.78906 4.03394 4.17969 4.73706 4.17969 5.47925C4.17969 6.65112 3.24219 7.62769 2.07031 7.62769ZM17.4609 20.8699H13.8672V15.2058C13.8672 13.8386 13.8281 12.1199 11.9531 12.1199C10.0781 12.1199 9.80469 13.5652 9.80469 15.0886V20.8699H6.17188V9.19019H9.64844V10.7917H9.6875C10.1953 9.89331 11.3672 8.91675 13.125 8.91675C16.7969 8.91675 17.5 11.3386 17.5 14.4636V20.8699H17.4609Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+            <span class="p-2 rounded-full border border-primary">
+              <svg
+                class="w-3 h-3"
+                width="20"
+                height="24"
+                viewBox="0 0 20 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M19.0625 13.6042C19.0625 19.1511 15.2734 23.0574 9.6875 23.0574C4.29688 23.0574 0 18.7605 0 13.3699C0 8.01831 4.29688 3.68237 9.6875 3.68237C12.2656 3.68237 14.4922 4.65894 16.1719 6.22144L13.5156 8.7605C10.0781 5.44019 3.67188 7.94019 3.67188 13.3699C3.67188 16.7683 6.36719 19.5027 9.6875 19.5027C13.5156 19.5027 14.9609 16.7683 15.1562 15.323H9.6875V12.0027H18.9062C18.9844 12.5105 19.0625 12.9792 19.0625 13.6042Z"
+                  fill="white"
+                />
+              </svg>
+            </span>
+          </div>
         </div>
+        <!-- span1 -->
+        <div class="col-span-1 text-left space-y-4">
+          <div>
+            <h3 class="text-white text-base fornt-semibold">Subscribe</h3>
+            <div class="bg-purple-500 h-[2px] w-8"></div>
+          </div>
+          <div class="text-xs text-lightPurple space-y-2">
+            <p class="">Cyber Security</p>
+            <p class="">IT Management</p>
+            <p class="">QA & Testing</p>
+            <p class="">Infrastructure Plan</p>
+            <p class="">IT Consultant</p>
+          </div>
+        </div>
+        <!-- span2 -->
+      </div>
+      <!-- sec2 -->
+      <div class="col-span-1 grid grid-cols-1 sm:grid-cols-2 gap-5">
+        <!-- span3 -->
+        <div class="flex flex-col items-start space-y-4">
+          <div>
+            <h3 class="text-white text-base fornt-semibold">Subscribe</h3>
+            <div class="bg-purple-500 h-[2px] w-8"></div>
+          </div>
+          <p class="text-lightPurple my-4">
+            Sign up to recieve the latest article
+          </p>
+          <div class="text-xs text-lightPurple space-y-2">
+            <input
+              class="bg-white text-gray-500 w-full p-3"
+              placeholder="Enter Your Email"
+            />
+          </div>
+          <button class="bg-primary px-3 py-2 rounded-sm">Register</button>
+        </div>
+        <!-- span3 -->
+        <div class="space-y-4">
+          <div class="text-left">
+            <h3 class="text-white text-base fornt-semibold">Contact</h3>
+            <div class="bg-purple-500 h-[2px] w-8"></div>
+          </div>
+          <div class="flex flex-row space-x-2 items-center">
+            <svg
+              class="w-4 h-4 flex items-center"
+              width="56"
+              height="53"
+              viewBox="0 0 56 53"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M29.0452 20.0376C31.2734 20.8359 32.9867 22.4737 33.7682 24.5169C34.5775 26.633 34.3714 28.9355 33.2038 30.91C32.9922 31.2312 32.6051 31.5306 32.236 31.6584C31.7192 31.8374 31.1187 31.7975 30.5822 31.4875C29.7125 30.9623 29.3677 29.8422 29.9285 28.9042C30.4894 27.9663 30.6433 26.8387 30.2247 25.7441C29.8339 24.7226 28.9543 23.9529 27.8911 23.5775C26.8279 23.202 26.3354 22.133 26.6469 21.1988C27.0322 20.239 28.0837 19.7095 29.0452 20.0376ZM31.4831 13.0782C35.8377 14.6274 39.2363 17.8301 40.8551 22.0623C42.4739 26.2945 42.0616 30.8997 39.7444 34.6771C39.459 35.0239 39.1457 35.2977 38.7028 35.4511C38.186 35.6301 37.6593 35.5646 37.1228 35.2546C36.1793 34.755 35.9083 33.6093 36.4232 32.7699C38.1517 29.8574 38.41 26.3799 37.2378 23.3151C36.0377 20.1774 33.5187 17.7445 30.2272 16.5706C29.2378 16.1696 28.6715 15.1262 29.0568 14.1664C29.3683 13.2321 30.4198 12.7027 31.4831 13.0782ZM33.9209 6.11873C40.4021 8.41897 45.486 13.1864 47.9421 19.6077C50.3702 25.9561 49.7519 32.8638 46.3129 38.5172C46.0554 38.9369 45.7421 39.2107 45.373 39.3386C44.8563 39.5175 44.2558 39.4776 43.7192 39.1676C42.8495 38.6425 42.5047 37.5224 42.9917 36.61C45.8419 31.8215 46.3802 26.0158 44.3986 20.835C42.3891 15.5812 38.083 11.536 32.6651 9.61123C31.6756 9.21019 31.1832 8.14121 31.4947 7.20697C31.88 6.24716 32.9315 5.71769 33.9209 6.11873ZM19.0314 22.9274L14.9793 23.9177C15.0658 28.5153 16.7683 32.9665 19.8077 36.5414L23.5808 34.8214C24.2911 34.4928 25.2706 34.6493 25.845 35.2768L30.6255 40.5624C31.3017 41.2373 31.2954 42.3137 30.7984 42.9816L26.9507 47.785C26.4538 48.4529 25.4383 48.6394 24.6244 48.2602C10.6871 41.7662 4.46315 25.494 10.7532 11.9943C11.1205 11.206 12.0244 10.7277 12.8562 10.9354L19.0484 12.2615C19.8802 12.4692 20.6122 13.2899 20.5501 14.2204L20.4584 21.1936C20.4422 22.0256 19.7976 22.7447 19.0314 22.9274Z"
+                fill="#a855f7"
+              />
+            </svg>
+            <p class="text-xs text-lightPurple">+88 02 871116</p>
+          </div>
+          <div class="text-xs text-lightPurple space-y-2">
+            <div class="flex flex-row space-x-2">
+              <svg
+                class="w-4 h-4"
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M1.6875 2.5H16.3125C17.2266 2.5 18 3.27344 18 4.1875C18 4.75 17.7188 5.24219 17.2969 5.55859L9.66797 11.2891C9.24609 11.6055 8.71875 11.6055 8.29688 11.2891L0.667969 5.55859C0.246094 5.24219 0 4.75 0 4.1875C0 3.27344 0.738281 2.5 1.6875 2.5ZM0 6.4375L7.62891 12.2031C8.4375 12.8008 9.52734 12.8008 10.3359 12.2031L18 6.4375V13.75C18 15.0156 16.9805 16 15.75 16H2.25C0.984375 16 0 15.0156 0 13.75V6.4375Z"
+                  fill="#a855f7"
+                />
+              </svg>
+              <p>solutions@cloudly.io</p>
+            </div>
+            <div class="flex flex-row space-x-2">
+              <svg
+                class="w-4 h-4 text-purple-500 dark:text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M11.906 1.994a8.002 8.002 0 0 1 8.09 8.421 7.996 7.996 0 0 1-1.297 3.957.996.996 0 0 1-.133.204l-.108.129c-.178.243-.37.477-.573.699l-5.112 6.224a1 1 0 0 1-1.545 0L5.982 15.26l-.002-.002a18.146 18.146 0 0 1-.309-.38l-.133-.163a.999.999 0 0 1-.13-.202 7.995 7.995 0 0 1 6.498-12.518ZM15 9.997a3 3 0 1 1-5.999 0 3 3 0 0 1 5.999 0Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+              <p class="text-left">
+                House #429(2nd Floor). <br />Road#30 <br />Dhaka, Bangladesh
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- span4 -->
+      </div>
+      <!-- sec2 -->
     </div>
-    <div class="bottom-0 bg-[#24193a] " >
-        
-    </div>
+  </div>
+  <div
+    class="bottom-0 text-center text-gray-300 text-xs py-2 font-medium bg-[#0c0815] relative"
+  >
+    All right reserved
+  </div>
 </footer>
