--- a/src/services.html
+++ b/src/services.html
@@ -1,28 +1,94 @@
-<div class="relative bg-cover bg-center h-[500px]" style="background-image: url('/src/assets/service-bg.png');">
-   
-    <div class="absolute inset-0 bg-[#b9a9da] opacity-20 "></div>
-    
-    <div class="relative flex items-center justify-center h-full text-center text-white">
-        <div>
-            <h1 class="text-4xl font-bold mb-4">Welcome to Our Website</h1>
-            <p class="text-xl">This is a beautiful banner with a background image and a purple overlay.</p>
-        </div>
+<div
+  class="relative bg-cover bg-center h-auto sm:h-[500px]"
+  style="background-image: url('/src/assets/service-bg.png')"
+>
+  <div class="absolute inset-0 bg-[#b9a9da] opacity-20"></div>
+
+  <div
+    class="relative flex flex-col items-center justify-center h-full text-center text-white"
+  >
+    <div class="space-y-4 my-4">
+      <p class="text-sm text-primary mb-4">POPULAR SERVICES</p>
+      <h1 class="text-3xl text-gray-800 font-bold">
+        We Provide Our Client Best <br />
+        IT Solution Services
+      </h1>
     </div>
+    <!--  -->
+    <div
+      class="space-x-0 space-y-2 sm:space-y-0 sm:space-x-6 flex flex-col sm:flex-row"
+    >
+      <div
+        class="flex flex-col items-center space-y-2 justify-center bg-white py-5 px-4"
+      >
+        <img
+          src="/src/assets/micro.svg"
+          alt="Hero Shape"
+          class="h-[50px] w-auto"
+        />
+        <h3 class="text-base text-gray-800 font-medium">Digital Marketing</h3>
+        <p class="text-gray-400 text-xs">
+          Providing the solution for <br />
+          non-IT business
+        </p>
+      </div>
+      <div
+        class="flex flex-col items-center space-y-2 justify-center bg-white py-5 px-4"
+      >
+        <img
+          src="/src/assets/micro.svg"
+          alt="Hero Shape"
+          class="h-[50px] w-auto"
+        />
+        <h3 class="text-base text-gray-800 font-medium">Digital Marketing</h3>
+        <p class="text-gray-400 text-xs">
+          Providing the solution for <br />
+          non-IT business
+        </p>
+      </div>
+      <div
+        class="flex flex-col items-center space-y-2 justify-center bg-white py-5 px-4"
+      >
+        <img
+          src="/src/assets/micro.svg"
+          alt="Hero Shape"
+          class="h-[50px] w-auto"
+        />
+        <h3 class="text-base text-gray-800 font-medium">Digital Marketing</h3>
+        <p class="text-gray-400 text-xs">
+          Providing the solution for <br />
+          non-IT business
+        </p>
+      </div>
+      <div
+        class="flex flex-col items-center space-y-2 justify-center bg-white py-5 px-4"
+      >
+        <img
+          src="/src/assets/micro.svg"
+          alt="Hero Shape"
+          class="h-[50px] w-auto"
+        />
+        <h3 class="text-base text-gray-800 font-medium">Digital Marketing</h3>
+        <p class="text-gray-400 text-xs">
+          Providing the solution for <br />
+          non-IT business
+        </p>
+      </div>
+      <div
+        class="flex flex-col items-center space-y-2 justify-center bg-white py-5 px-4"
+      >
+        <img
+          src="/src/assets/micro.svg"
+          alt="Hero Shape"
+          class="h-[50px] w-auto"
+        />
+        <h3 class="text-base text-gray-800 font-medium">Digital Marketing</h3>
+        <p class="text-gray-400 text-xs">
+          Providing the solution for <br />
+          non-IT business
+        </p>
+      </div>
+    </div>
+    <!--  -->
+  </div>
 </div>
-
-
-<!-- <div class="relative bg-cover bg-center h-[550px]" style="background-image: url('/src/assets/hero-slider.jpg');">
-    <div class="" >
-        <img src="/src/assets/hero-shape-1.png" alt="Brand Logo" class=" absolute ml-0 h-96 w-auto" />
-    </div>
-
-    <div class="absolute inset-0 bg-[#2b154f] opacity-50"></div>
-   <div class=" " >
-   </div>
-    <div class="relative flex items-center justify-center h-full text-center text-white">
-        <div>
-            <h1 class="text-4xl font-bold mb-4">Welcome to Our Website</h1>
-            <p class="text-xl">This is a beautiful banner with a background image and a purple overlay.</p>
-        </div>
-    </div>
-</div> -->
